Fix gap not working on flexbox on other browsers

--- a/src/components/Checkbox.css
+++ b/src/components/Checkbox.css
@@ -1,7 +1,20 @@
 .__checkbox-row {
   display: flex;
   align-items: center;
-  column-gap: 0.5rem;
+}
+
+.__checkbox-row > :not(:last-child) {
+  margin-right: 0.5rem;
+}
+
+@supports (display: subgrid) {
+  .__checkbox-row {
+    column-gap: 0.5rem;
+  }
+
+  .__checkbox-row > :not(:last-child) {
+    margin-right: 0;
+  }
 }
 
 .__checkbox-input {
