--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -8,13 +8,39 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  gap: 1rem;
+}
+
+.__footer > :not(:last-child) {
+  margin-right: 1rem;
+}
+
+@supports (display: subgrid) {
+  .__footer {
+    gap: 1rem;
+  }
+
+  .__footer > :not(:last-child) {
+    margin-right: 0;
+  }
 }
 
 .__footer-section {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+}
+
+.__footer-section > :not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+
+@supports (display: subgrid) {
+  .__footer-section {
+    gap: 0.5rem;
+  }
+
+  .__footer-section > :not(:last-child) {
+    margin-bottom: 0;
+  }
 }
 
 .__footer-section-title {
@@ -31,8 +57,21 @@
   padding-left: 0;
   display: flex;
   flex-direction: column;
-  gap: 5px;
   list-style: none;
+}
+
+.__footer-section-links > :not(:last-child) {
+  margin-bottom: 5px;
+}
+
+@supports (display: subgrid) {
+  .__footer-section-links {
+    gap: 5px;
+  }
+
+  .__footer-section-links > :not(:last-child) {
+    margin-bottom: 0;
+  }
 }
 
 .__footer-section-link {
