--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -1,7 +1,10 @@
 .__products {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+}
+
+.__products > :not(:last-child) {
+  margin-bottom: 1rem;
 }
 
 .__products > .card {
@@ -9,6 +12,10 @@
 }
 
 @media (min-width: 640px) {
+  .__products > :not(:last-child) {
+    margin-right: 1rem;
+  }
+
   .__products > .card {
     flex-basis: 200px;
   }
@@ -18,6 +25,13 @@
   .__products {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 1rem;
+    grid-gap: 1rem;
+  }
+
+  .__products > :not(:last-child) {
+    margin-bottom: 0;
+    margin-right: 0;
   }
 }
 
