--- a/src/style.css
+++ b/src/style.css
@@ -12,9 +12,29 @@
 
 @media (min-width: 600px) {
   .__layout-with-aside {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    column-gap: 1rem;
+    display: flex;
+  }
+
+  .__layout-with-aside > :first-child {
+    width: 20%;
+    margin-right: 1rem;
+  }
+
+  .__layout-with-aside > :last-child {
+    flex-grow: 1;
+  }
+
+  @supports (display: grid) {
+    .__layout-with-aside {
+      display: grid;
+      grid-template-columns: 1fr 4fr;
+      column-gap: 1rem;
+    }
+
+    .__layout-with-aside > :first-child {
+      width: auto;
+      margin-right: 0;
+    }
   }
 
   .__aside {
